<resources>
    <string name="app_name">My Application</string>
    <string name="digite_seu_nome">Digite seu nome</string>
    <string name="digite_seu_telefone">Digite seu telefone</string>
    <string name="digite_seu_endere_o">Digite seu endereço</string>
    <string name="digite_seu_e_mail">Digite seu e-mail</string>
    <string name="cadastro_de_usu_rio">Cadastro de usuário</string>
    <string name="e_mail">E-mail</string>
    <string name="endere_o">Endereço</string>
    <string name="digite_seu_endereco">digite_seu_endereco</string>
    <string name="digite_seu_cpf">Digite seu cpf</string>
    <string name="nome">Nome</string>
    <string name="endereco">Endereco</string>
    <string name="telefone">Telefone</string>
    <string name="cpf">CPF</string>
    <string name="data_de_nascimento">Data de Nascimento</string>
    <string name="finalizar_cadastro">Finalizar Cadastro</string>
    <string name="cadastro_de_usuario">cadastro_de_usuario</string>
    <string name="digite_sua_senha">Digite sua senha</string>
    <string name="confirma_senha">Confirme sua senha</string>
    <string name="Certificado">Certificado (Opcional)</string>
</resources>
