<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".gui.CadastroUsuarioActivity">


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="26dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="730dp">


            <Button
                android:id="@+id/botaoFinalizarCadastro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="70dp"
                android:layout_marginTop="650dp"
                android:layout_marginRight="70dp"
                android:background="#AF0D25"
                android:text="@string/finalizar_cadastro"
                android:textColor="#FFFFFF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.182"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/nomeTextField"
                android:layout_width="297dp"
                android:layout_height="37dp"
                android:layout_marginTop="88dp"
                android:layout_marginHorizontal="15dp"
                android:ems="10"
                android:hint="@string/digite_seu_nome"
                android:inputType="textPersonName"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.254"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/dataNascimentoTextField"
                android:layout_width="297dp"
                android:layout_height="37dp"
                android:layout_marginTop="172dp"
                android:layout_marginHorizontal="15dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.241"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/telefoneTextField"
                android:layout_width="297dp"
                android:layout_height="37dp"
                android:layout_marginTop="320dp"
                android:layout_marginHorizontal="15dp"
                android:ems="10"
                android:hint="@string/digite_seu_telefone"
                android:inputType="textPersonName"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.254"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/enderecoTextField"
                android:layout_width="297dp"
                android:layout_height="37dp"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="400dp"
                android:ems="10"
                android:hint="Digite seu endereco"
                android:inputType="textPersonName"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.233"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/emailTextField"
                android:layout_width="297dp"
                android:layout_height="37dp"
                android:layout_marginTop="468dp"
                android:layout_marginHorizontal="15dp"
                android:ems="10"
                android:hint="@string/digite_seu_e_mail"
                android:inputType="textPersonName"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.182"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TextFields" />

            <EditText
                android:id="@+id/cpfTextField"
                android:layout_width="297dp"
                android:layout_height="37dp"
                android:layout_marginTop="244dp"
                android:layout_marginHorizontal="15dp"
                android:ems="10"
                android:hint="@string/digite_seu_cpf"
                android:inputType="textPersonName"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.245"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/labelNome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                android:layout_marginHorizontal="15dp"
                android:text="@string/nome"
                android:textColor="#0A0404"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.071"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/labelDataNascimento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginLeft="24dp"
                android:layout_marginTop="148dp"
                android:layout_marginHorizontal="15dp"
                android:text="@string/data_de_nascimento"
                android:textColor="#050101"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/labelCpf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="228dp"
                android:layout_marginHorizontal="15dp"
                android:text="@string/cpf"
                android:textColor="#0F0000"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.075"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/labelTelefone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="296dp"
                android:layout_marginHorizontal="15dp"
                android:text="@string/telefone"
                android:textColor="#0F0000"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.07"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/labelEndereco"
                android:layout_width="101dp"
                android:layout_height="23dp"
                android:layout_marginTop="380dp"
                android:layout_marginHorizontal="15dp"
                android:text="@string/endereco"
                android:textColor="#090101"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.077"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/labelEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="452dp"
                android:layout_marginHorizontal="15dp"
                android:text="@string/e_mail"
                android:textColor="#090202"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.064"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/labelCadastroUsuario"
                android:layout_width="wrap_content"
                android:layout_height="47dp"
                android:layout_marginStart="104dp"
                android:layout_marginLeft="104dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="1dp"
                android:layout_marginRight="104dp"
                android:text="Cadastro de usuário"
                android:textColor="#090000"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="@+id/caixatxtTelefone"
                app:layout_constraintHorizontal_bias="0.458"
                app:layout_constraintStart_toEndOf="@+id/labelCpf"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/labelSenha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Senha"
                android:layout_marginTop="520dp"
                android:layout_marginHorizontal="15dp"
                android:textColor="#090202"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.064"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/labelSenha2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="520dp"
                android:text="Senha"
                android:textColor="#090202"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.064"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/labelSenha3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="520dp"
                android:text="Senha"
                android:textColor="#090202"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.064"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/senhaTextField"
                android:ems="10"
                android:inputType="textPassword"
                android:layout_width="297dp"
                android:layout_height="37dp"
                android:layout_marginTop="538dp"
                android:layout_marginHorizontal="15dp"
                android:hint="@string/digite_sua_senha"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.182"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TextFields" />

            <EditText
                android:id="@+id/confirmaSenhaTextField"
                android:ems="10"
                android:inputType="textPassword"
                android:layout_width="297dp"
                android:layout_height="37dp"
                android:layout_marginTop="580dp"
                android:layout_marginHorizontal="15dp"
                android:hint="@string/confirma_senha"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.182"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TextFields" />
        </RelativeLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>