<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".gui.CadastroUsuarioActivity">


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="26dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="730dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                app:srcCompat="@drawable/logo"
                android:layout_marginTop="50dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <Button
                android:id="@+id/botaoContinuarCadastro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="70dp"
                android:layout_marginTop="500dp"
                android:layout_marginRight="70dp"
                android:background="#AF0D25"
                android:text="Continuar cadastro"
                android:textColor="#FFFFFF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.182"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/nomeTextField"
                android:layout_width="match_parent"
                android:layout_height="37dp"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="200dp"
                android:ems="10"
                android:hint="@string/digite_seu_nome"
                android:inputType="textPersonName"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.254"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/enderecoTextField"
                android:layout_width="match_parent"
                android:layout_height="37dp"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="360dp"
                android:ems="10"
                android:hint="Digite seu endereco"
                android:inputType="textPersonName"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.233"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/cpfTextField"
                android:layout_width="match_parent"
                android:layout_height="37dp"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="440dp"
                android:ems="10"
                android:hint="@string/digite_seu_cpf"
                android:inputType="textPersonName"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.245"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/labelNome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="180dp"
                android:text="@string/nome"
                android:textColor="#0A0404"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.071"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/labelDataNascimento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginHorizontal="15dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="260dp"
                android:text="@string/data_de_nascimento"
                android:textColor="#050101"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/labelCpf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="420dp"
                android:text="@string/cpf"
                android:textColor="#0F0000"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.075"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/labelEndereco"
                android:layout_width="101dp"
                android:layout_height="23dp"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="340dp"
                android:text="@string/endereco"
                android:textColor="#090101"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.077"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/dataNascimentoTextField"
                android:layout_width="match_parent"
                android:layout_height="37dp"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="280dp"
                android:ems="10"
                android:hint="vou fazer um spinner aq"

                android:inputType="textPersonName"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.241"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </RelativeLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>